[gd_scene load_steps=8 format=2]

[ext_resource path="res://tscn/dialogs/LessonDialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/NewLessonDialog.gd" type="Script" id=2]
[ext_resource path="res://res/Helvetica_bold.tres" type="DynamicFont" id=3]
[ext_resource path="res://res/buttons/default_green_button_normal.tres" type="StyleBox" id=4]
[ext_resource path="res://res/buttons/default_green_button_hover.tres" type="StyleBox" id=5]
[ext_resource path="res://res/buttons/default_green_button_pressed.tres" type="StyleBox" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.117647, 0.564706, 1, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15

[node name="NewLessonDialog" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Head" parent="Panel/VBoxContainer" index="0"]
custom_styles/panel = SubResource( 1 )

[node name="Title" parent="Panel/VBoxContainer/Head" index="0"]
autowrap = false
clip_text = false

[node name="LessonOptionButton" parent="Panel/VBoxContainer/Body/VboxContainer/ScrollContainer/GridContainer" index="5"]
text = "Aucun cours trouvé"

[node name="MinutesOptionButton" parent="Panel/VBoxContainer/Body/VboxContainer/ScrollContainer/GridContainer/Schedule" index="4"]
items = [ "00", null, false, 0, null, "30", null, false, 2, null ]

[node name="HBoxContainer" parent="Panel/VBoxContainer/Foot" index="0"]
margin_left = 175.0
margin_top = 22.0
margin_right = 425.0
margin_bottom = 57.0

[node name="CreateButton" type="Button" parent="Panel/VBoxContainer/Foot/HBoxContainer" index="0"]
margin_right = 120.0
margin_bottom = 35.0
rect_min_size = Vector2( 120, 30 )
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
enabled_focus_mode = 0
text = "Créer"

[node name="CancelButton" parent="Panel/VBoxContainer/Foot/HBoxContainer" index="1"]
margin_left = 130.0
margin_right = 250.0
margin_bottom = 35.0

[connection signal="item_selected" from="Panel/VBoxContainer/Body/VboxContainer/ScrollContainer/GridContainer/TypeOptionButton" to="." method="_on_TypeOptionButton_item_selected"]
[connection signal="color_picked" from="Panel/VBoxContainer/Body/VboxContainer/ScrollContainer/GridContainer/ColorGrid" to="." method="_on_ColorGrid_color_picked"]
[connection signal="pressed" from="Panel/VBoxContainer/Foot/HBoxContainer/CreateButton" to="." method="_on_CreateButton_pressed"]
